couple of minor updates

--- a/resume.html
+++ b/resume.html
@@ -124,12 +124,12 @@
             </div>
             <div class="row experience-row">
                 <div class="col-lg-5">
-                  <p><b>Engineering Manager and Lead UI Architect, Cigna</b></p>
+                  <p><b>Innovation Engineering Manager, Cigna</b></p>
                   <p>Portland, OR — 2011-present</p>
                   <ul>
                   <li>Engineering manager for a web to native application conversion, as well as lead engineer for the Android part of the work</a>
                   <li>Technical delivery manager for a high profile <a href="http://compass.cigna.com">project</a> at Cigna that was delivered to a major customer</li>
-                  <li>I manage a team of UI developers in the Portland office</li>
+                  <li>I manage a team of UI/Innovation engineers in the Portland office</li>
                   <li>UI evangelist/speaker for Cigna front end solutions</li>
                   <li>Led front end design/development of the <a href="http://developer.cigna.com">Cigna Developer API</a></li>
                   <li>Led front end design/development of a number of ‘side’ projects to present to senior management</li>
