--- a/resume.html
+++ b/resume.html
@@ -285,8 +285,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -320,7 +318,8 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-default btn-lg">Send</button>
+                                <!-- <input type="hidden" name="_next" value="geekfamily.github.io/thanks.html" /> -->
+                                <button type="submit" value="Send" class="btn btn-default btn-lg">Send</button>
                             </div>
                         </div>
                     </form>
