--- a/resume.html
+++ b/resume.html
@@ -102,8 +102,8 @@
             </div>
             <div class="row">
               <ul>
-              <li>Experienced, talented and motivated programmer with more than 16 years experience in software development.</li>
-              <li>Managerial experience including the mangement of projects, budgets and timelines.</li>
+              <li>Experienced, talented and motivated programmer with more than 18 years experience in software development.</li>
+              <li>Managerial experience including the mangement of projects, large budgets and timelines.</li>
               <li>Skilled in a number of different computing technologies and always looking to learn new ones.</li>
               <li>I have a great interest in UI design and user experience research.</li>
               <li>I have worked in a number of industries and led teams of varying sizes on successful projects.</li>
@@ -124,20 +124,35 @@
             </div>
             <div class="row experience-row">
                 <div class="col-lg-5">
-                  <p><b>Innovation Engineering Manager, Cigna</b></p>
-                  <p>Portland, OR — 2011-present</p>
-                  <ul>
-                  <li>Engineering manager for a web to native application conversion, as well as lead engineer for the Android part of the work</a>
-                  <li>Technical delivery manager for a high profile <a href="http://compass.cigna.com">project</a> at Cigna that was delivered to a major customer</li>
-                  <li>I manage a team of UI/Innovation engineers in the Portland office</li>
-                  <li>UI evangelist/speaker for Cigna front end solutions</li>
-                  <li>Led front end design/development of the <a href="http://developer.cigna.com">Cigna Developer API</a></li>
-                  <li>Led front end design/development of a number of ‘side’ projects to present to senior management</li>
-                  <li>Led design/development on internal Android and iOS applications</li>
-                  <li>I have represented Cigna as a design judge at a number of health conferences and have also presented at a few mobile conferences</li>
-                  </ul>
+                    <p><b>Director of Application Engineering, Rigado LLC</b></p>
+                    <p>(Previous to a recent merger with Rigado, I was a partner with Rivetry LLC)</p>
+                    <p>Portland, OR — 2015-present</p>
+                    <ul>
+                        <li>Responsible for front end engineering work across all software products</li>
+                        <li>Technical delivery manager on a number of client projects</li>
+                        <li>Product manager on a number of client projects</li>
+                        <li>Lead Android engineer</li>
+                        <li>Web engineering architect and mentor</li>
+                        <li>I manage a group of junior developers</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2">
+                  <p><b>Innovation Engineering Manager, Cigna</b></p>
+                  <p>Portland, OR — 2011-2015</p>
+                  <ul>
+                      <li>Engineering manager for a web to native application conversion, as well as lead engineer for the Android part of the work</a>
+                      <li>Technical delivery manager for a high profile <a href="http://compass.cigna.com">project</a> at Cigna that was delivered to a major customer</li>
+                      <li>I managed a team of UI/Innovation engineers in the Portland office</li>
+                      <li>UI evangelist/speaker for Cigna front end solutions</li>
+                      <li>Led front end design/development of the <a href="http://developer.cigna.com">Cigna Developer API</a></li>
+                      <li>Led front end design/development of a number of ‘side’ projects to present to senior management</li>
+                      <li>Led design/development on internal Android and iOS applications</li>
+                      <li>I represented Cigna as a design judge at a number of health conferences and have also presented at a few mobile conferences</li>
+                  </ul>
+                </div>
+            </div>
+            <div class="row experience-row">
+                <div class="col-lg-5">
                   <p><b>Expert UI Architect/Innovator, Nike</b></p>
                   <p>Beaverton, OR — 2008-2011</p>
                   <ul>
@@ -150,16 +165,16 @@
                     <li>Nominated for company wide innovation award</li>
                   </ul>
                 </div>
-            </div>
-            <div class="row experience-row">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-lg-offset-2">
                   <p><b>Java Swing/UI Engineer, Hewlett Packard</b></p>
                   <p>Roseville, CA — 2007-2008</p>
                   <ul>
                     <li>Led work on the (then) latest release of HP’s Diagnostics tool which was a swing based application for monitoring enterprise environments.  This included debugging issues as well as developing solutions to ongoing problems the product had.</li>
                   </ul>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2">
+            </div>
+            <div class="row experience-row">
+                <div class="col-lg-5">
                   <p><b>Senior Software Engineer, Intel</b></p>
                   <p>Folsom, CA/Portland, OR — 2005-2007</p>
                   <ul>
@@ -170,9 +185,7 @@
                     <li>Recipient of numerous awards for dedication and commitment to the work.</li>
                   </ul>
                 </div>
-            </div>
-            <div class="row experience-row">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-lg-offset-2">
                   <p><b>Senior Software Engineer, Compassoft</b></p>
                   <p>El Dorado Hills, CA — 2004-2005 - Company Closed its doors</p>
                   <ul>
@@ -180,7 +193,9 @@
                     <li>Co-led the development of the Swing application framework to aid in new UI development and to provide a stable platform for the Compassoft product.</li>
                   </ul>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2">
+            </div>
+            <div class="row experience-row">
+                <div class="col-lg-5">
                   <p><b>Senior Software Engineer, Visualize Inc.</b></p>
                   <p>Gold River, CA — 2002-2004 - Company closed its doors</p>
                   <ul>
@@ -189,9 +204,7 @@
                     <li>Led development on the “Visual Genetics” swing project, a Java/Oracle based 3-tier genetic analysis application.</li>
                   </ul>
                 </div>
-            </div>
-            <div class="row experience-row">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-lg-offset-2">
                   <p><b>Senior Software Engineer, Genomica Inc.</b></p>
                   <p>Gold River, CA — 2001-2002 - Company closed its doors</p>
                   <ul>
@@ -200,7 +213,9 @@
                     <li>Part of a team that rewrote the user interface portion of the product in Swing in about ¼ of the time it was forecasted to take.</li>
                   </ul>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2">
+            </div>
+            <div class="row experience-row">
+                <div class="col-lg-5">
                   <p><b>Senior Software Engineer, Propel</b></p>
                   <p>Folsom, CA — 2000-2001 - Company closed its doors</p>
                   <ul>
@@ -208,16 +223,16 @@
                     <li>I also provided core code and tools to prevent the other programmers on the CSA team from duplicating efforts.</li>
                   </ul>
                 </div>
-            </div>
-            <div class="row experience-row">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-lg-offset-2">
                   <p><b>Senior Software Engineer, Pandesic LLC</b></p>
                   <p>Folsom, CA — 2000-2000 - Company closed its doors</p>
                   <ul>
                     <li>Worked on Pandesic’s customer service application; enhanced existing pages and created new pages along with COM objects to meet the needs of customer specified requirements.</li>
                   </ul>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2">
+            </div>
+            <div class="row experience-row">
+                <div class="col-lg-5">
                   <p><b>Software Engineer, Intel</b></p>
                   <p>Folsom, CA — 1995-2000</p>
                   <ul>
@@ -264,9 +279,9 @@
             </div>
             <div class="row">
               <ul>
-                <li>Lego NXT, Robotics, Arduino, Raspberry PI, Scratch, Processing, Maker Movement,</li>
+                <li>Robotics, Arduino, Raspberry PI, Scratch, Processing, Maker Movement, Home Automation, Lego</li>
                 <li>Mobile Web Design, User Centered Design, UI best practices, Current design trends, Drawing</li>
-                <li>I am assisting with the technology curriculum at the local elementary school</li>
+                <li>I am assisting with the technology curriculum at 2 local schools</li>
                 <li>I have coached an <a href="http://www.usfirst.org/roboticsprograms/fll">FLL</a> team(2 years) that made it to the nationals</li>
                 <li>I am an <a href="http://www.usfirst.org/roboticsprograms/ftc">FTC</a> coach and mentor</li>
                 <li>I have run a technology/maker group for 11-13 year olds</li>
