--- a/resume.html
+++ b/resume.html
@@ -362,7 +362,7 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/james-motley-2b465431" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
                                 <a href="https://github.com/geekfamily/" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
